Various fixes to TypeScript package
Should be usable now (!) maybe kinda hopefully.

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ venv
 .*.sw*
 
 # Generated Typescript bindings
-typescript/pkg/src/com
+typescript/pkg/src/msgs
+typescript/pkg/dist
 
 # Node ignores
 node_modules/
